--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Project Manager</title>
     <main class="container">
         <section class="sidebar">
             <div class="card">
-                <img src="profile.jpg" alt="Maya Nelson" class="avatar" />
+                <img src="./images/profile.jpg" alt="Maya Nelson" class="avatar" />
                 <h2>Maya <br> Nelson</h2>
                 
    
