--- a/resume.html
+++ b/resume.html
@@ -28,7 +28,7 @@
      
              <div class="section-header"> 
                     <h2>EXPERIENCE</h2>
-                    <a href="My_CV.pdf" class="download-btn download-btn-desktop" download>Download CV</a>
+                    <a href="./docs/My_CV.pdf" class="download-btn download-btn-desktop" download>Download CV</a>
                 </div>
 
                 <div class="card">
