--- a/resume.html
+++ b/resume.html
@@ -173,7 +173,7 @@ Statement into Common Size analysis.</li>
         </main>
 
  
-         <a href="My_CV.pdf" class="download-btn download-btn-mobile" download>Download CV</a> 
+         <a href="./docs/My_CV.pdf" class="download-btn download-btn-mobile" download>Download CV</a> 
     </div>
 </body>
 </html>
