--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ offer a robust background in accounting and finance.</p>
     </main>
 
     <footer class="footer">
-        <p>© 2035 by Maya Nelson.</p>
+        <p>© by Hussin Hegazy 2035.</p>
         <div class="contact">
             <div class="contact-item">
           
