--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <body class="contact-page">
     <div class="container">
       <header class="page-header">
-        <a href="index.html" class="logo-title">Maya Nelson</a>
+        <a href="index.html" class="logo-title">Hussin Hegazy</a>
         <nav class="header-nav">
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -49,8 +49,8 @@
               </div>
               <div class="contact-details">
                 <h4>Email</h4>
-                <a href="mailto:your.email@example.com"
-                  >your.email@example.com</a
+                <a href="mailto:info@mysite.com"
+                  >info@mysite.com</a
                 >
               </div>
             </div>
@@ -102,7 +102,7 @@
               <div class="contact-details">
                 <h4>LinkedIn</h4>
                 <a
-                  href="https://www.linkedin.com/in/yourprofile"
+                  href="#"
                   target="_blank"
                   >yourprofile</a
                 >
