--- a/contact.html
+++ b/contact.html
@@ -49,8 +49,8 @@
               </div>
               <div class="contact-details">
                 <h4>Email</h4>
-                <a href="mailto:info@mysite.com"
-                  >info@mysite.com</a
+                <a href="mailto:hussinhegazy350@gmail.com"
+                  >Hussinhegazy350@gmail.com</a
                 >
               </div>
             </div>
@@ -75,7 +75,7 @@
               </div>
               <div class="contact-details">
                 <h4>Phone</h4>
-                <a href="tel:+1234567890">+1 234 567 890</a>
+                <a href="tel:+201065264613">+20 10 652 646 13</a>
               </div>
             </div>
 
@@ -102,7 +102,7 @@
               <div class="contact-details">
                 <h4>LinkedIn</h4>
                 <a
-                  href="#"
+                  href="https://eg.linkedin.com/in/hussin-saleh1"
                   target="_blank"
                   >yourprofile</a
                 >
